--- a/templates/list.html
+++ b/templates/list.html
@@ -128,7 +128,7 @@
             </tr>
             <!-- Dirs -->
             {% for v in info.folders[1:] %}
-            <tr jump-to="{{ v.full_path }}">
+            <tr jump-to="{{ path }}/{{ v.name }}">
               <td class="file">
                 <ion-icon name="folder"></ion-icon> {{ v.name }}
               </td>
@@ -138,7 +138,7 @@
             {% endfor %}
             <!-- Files -->
             {% for v in info.files %}
-            <tr jump-to="{{ v.full_path }}">
+            <tr jump-to="{{ path }}/{{ v.name }}">
               <td class="file">
                 <ion-icon name="document"></ion-icon> {{ v.name }}
               </td>
@@ -155,8 +155,15 @@
     const root = "{{ url_for('.catch_all') }}"
 
     function back() {
-      location.href =
-        root + '{{ path }}'.replace('//', '/').replace(/\/$/, '') + '/../'
+      location.href = path_format(root + '{{ path }}/..')
+    }
+
+    function path_format(path) {
+      while (path.includes('//')) {
+        path = path.replace('//', '/')
+      }
+
+      return '/' + path.replace(/^\/|\/$/g, '')
     }
 
     document.querySelectorAll('.list-header-container h3').forEach(function(e) {
@@ -178,7 +185,7 @@
 
     document.querySelectorAll('[jump-to]').forEach(function(e) {
       e.addEventListener('click', function() {
-        location.href = (root + this.getAttribute('jump-to')).replace('//', '/')
+        location.href = path_format(root + this.getAttribute('jump-to'))
       })
     })
   </script>
